--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,3 +14,19 @@
   color: #638751;
   text-shadow: #638751 0px 20px 30px;
 }
+
+@media screen and (max-width: 1160px) {
+  .title {
+    font-size: 40vw;
+    line-height: 40vw;
+  }
+}
+
+
+@media screen and (max-width: 530px) {
+  .title {
+    text-align: center;
+    padding-right: 0;
+    transform: translateY(-50%);
+  }
+}
